fixed critical error of overflowing

--- a/client/src/css/CompanyUserView.css
+++ b/client/src/css/CompanyUserView.css
@@ -1,10 +1,13 @@
-.viewback {
+.viewback2 {
   display: flex;
   height: 90vh;
   width: 82vw;
   flex-direction: column;
-  justify-content: center;
+  background-color: white;
+  overflow: auto;
   align-items: center;
+  justify-content: start;
+  padding: 1vw;
 }
 .filter {
   display: flex;
