--- a/client/src/css/userView.css
+++ b/client/src/css/userView.css
@@ -3,8 +3,10 @@
   height: 90vh;
   width: 82vw;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: start;
+  padding: 1vw;
+  overflow-x: hidden;
 }
 .filter {
   display: flex;
